# shared

./: .gitignore  README.md  testing.md
.github/workflows/: flatpak.yml
desktop/: CMakeLists.txt
desktop/cmake/: shared_common.cmake
desktop/src/core/: CMakeLists.txt
desktop/src/core/include/shared/desktop/core/: address_hint_repository.h  agent_configuration.h  app_metadata.h  app_paths.h  configuration_repository.h  enrollment_client.h  envelope_io.h  local_peer_addresses.h  log_capture.h  logging.h  logging_controller.h  openssl_runner.h  pending_enrollment_repository.h  security_materials.h  settings_repository.h  transfer_crypto.h
desktop/src/core/src/: address_hint_repository.cpp  app_paths.cpp  configuration_repository.cpp  enrollment_client.cpp  envelope_io.cpp  local_peer_addresses.cpp  log_capture.cpp  logging_controller.cpp  openssl_runner.cpp  pending_enrollment_repository.cpp  security_materials.cpp  settings_repository.cpp  transfer_crypto.cpp
desktop/src/daemon/: CMakeLists.txt
desktop/src/daemon/src/: daemon_application.cpp  daemon_application.h  enrollment_server.cpp  enrollment_server.h  main.cpp  peer_service.cpp  peer_service.h
desktop/src/gui/: CMakeLists.txt
desktop/src/gui/qml/: AboutDialog.qml  LogSettings.qml  LogViewerDialog.qml  Main.qml  PeersDialog.qml  SendClipboardDialog.qml  SendFilesDialog.qml  SettingsDialog.qml
desktop/src/gui/src/: app_controller.cpp  app_controller.h  main.cpp  tray_controller.cpp  tray_controller.h
desktop/tests/: CMakeLists.txt
desktop/tests/src/: sharedcore_tests.cpp
flatpak/: local.shared.Shared.desktop  local.shared.Shared.metainfo.xml.in  local.shared.Shared.yaml
proto/: shared.proto
spec/: ANDROID.md  CRYPTO.md  DESKTOP.md  PROTOCOL.md  README.md
